--- a/films/app/assets/stylesheets/films.scss
+++ b/films/app/assets/stylesheets/films.scss
@@ -48,7 +48,7 @@ article {
   width: 75%;
   margin: 1rem auto 3rem;
   header {
-    overflow: auto;
+    @include clearfix;
   }
 }
 
@@ -60,7 +60,7 @@ article {
 
 .hero-block {
   position: relative;
-  overflow: hidden;
+  @include clearfix;
 }
 
 .hero-logo-container {
@@ -93,9 +93,9 @@ article {
   width: 25%;
   margin-right: 1.5rem;
   h1 {
-      font-size: 2rem;
-      margin-bottom: 0;
-      color: $my_red;
+    font-size: 2rem;
+    margin-bottom: 0;
+    color: $my_red;
   }
   h2 {
     font-size: 1.2em;
