--- a/films/app/assets/stylesheets/films.scss
+++ b/films/app/assets/stylesheets/films.scss
@@ -1,10 +1,8 @@
 // Place all the styles related to the Films controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$my_red: #990000;
-$slightly_grey: #999;
-$main_fonts: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$heading_fonts: 'Oswald', Helvetica, Arial, sans-serif;
+@import 'variables';
+@import 'mixins';
 
 *,
 *::before,
@@ -104,10 +102,3 @@ article {
 }
 
 // This mixin provides a fancier clearfix than using the overflow property!
-@mixin clearfix {
-  &::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
