--- a/films/app/assets/stylesheets/films.scss
+++ b/films/app/assets/stylesheets/films.scss
@@ -4,7 +4,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'base';
-
+@import 'hero';
 
 .home {
   height: 100%;
@@ -12,35 +12,6 @@
   margin: 0 auto;
 }
 
-.hero-block {
-  position: relative;
-  @include clearfix;
-}
-
-.hero-logo-container {
-  float: left;
-  width: 25%;
-  padding: 1rem;
-  .hero-logo {
-    display: block;
-    width: 150px;
-    margin: auto;
-  }
-}
-
-.hero-title-container {
-  float: left;
-  width: 75%;
-  .hero-title {
-    font-size: 3rem;
-    margin: 2rem 0 0;
-    color: $my_red;
-  }
-  .hero-tagline {
-    color: $slightly_grey;
-    margin: 0.25rem 0;
-  }
-}
 
 .article-poster {
   float: left;
