--- a/films/app/assets/stylesheets/films.scss
+++ b/films/app/assets/stylesheets/films.scss
@@ -5,20 +5,6 @@
 @import 'mixins';
 @import 'base';
 @import 'hero';
-
-.article-poster {
-  float: left;
-  width: 25%;
-  margin-right: 1.5rem;
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 0;
-    color: $my_red;
-  }
-  h2 {
-    font-size: 1.2em;
-    color: $slightly_grey;
-  }
-}
+@@import 'article';
 
 // This mixin provides a fancier clearfix than using the overflow property!
